LM - fix navbar alignment for mobile

--- a/app/assets/stylesheets/partials/_navbar.scss
+++ b/app/assets/stylesheets/partials/_navbar.scss
@@ -21,10 +21,10 @@ $navbar-height: $grid-unit*2;
     z-index: 1;
     margin: 0;
     height: 46px;
-    padding: $grid-unit/3;
+    padding: $grid-unit/8;
     .icon-bar {
       background-color: white;
-      width: 32.8px;
+      width: 34.8px;
     }
   }
 }
@@ -39,7 +39,7 @@ $navbar-height: $grid-unit*2;
   margin-top: $grid-unit/2;
   margin-bottom: $grid-unit/2;
   padding: 2px $grid-unit/2;
-  font-size: 18px;
+  font-size: 17px;
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@ $navbar-height: $grid-unit*2;
 .navbar-brand {
   padding: 14px 0;
   color: white;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight:800;
   margin: auto;
@@ -62,7 +62,7 @@ $navbar-height: $grid-unit*2;
     color: black;  
   }
   position: absolute;
-  width: 100%;
+  width: 98%;
   left: 0;
   text-align: center;
 }
